--- a/clanepos.html
+++ b/clanepos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Sep 14 2022 08:16:48 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Sep 18 2022 13:13:29 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="631e719eed58059567c427b6" data-wf-site="61bba3b3c26659558fdd2a7b">
 <head>
   <meta charset="utf-8">
@@ -30,23 +30,24 @@
   <meta name="google-site-verification" content="pwE1tlRCgkTCf9vj-ch5A8ml8zfThOoOvesvGE0Rt3I">
 </head>
 <body>
-  <div data-animation="default" data-collapse="small" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
-    <div class="my-container w-container">
-      <a href="index.html" class="brand w-nav-brand"><img src="images/LOGO.svg" loading="lazy" alt=""></a>
-      <nav role="navigation" class="nav-menu w-nav-menu">
-        <a href="index.html" class="nav-link active w-nav-link">Work</a>
-        <a href="old-home-2.html" class="nav-link w-nav-link">About</a>
+  <div data-animation="default" data-collapse="small" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="new-navbar w-nav">
+    <div class="_1280-container w-container">
+      <a href="index.html" class="brand-2 w-nav-brand"><img src="images/LOGOWhite.svg" loading="lazy" alt=""></a>
+      <nav role="navigation" class="nav-menu-2 w-nav-menu">
+        <a href="index.html" class="navitem w-nav-link">Work</a>
+        <a href="old-home-2.html" class="navitem w-nav-link">About</a>
+        <a href="https://znap.link/desmondajimuda" target="_blank" class="navitem w-nav-link">Socials</a>
       </nav>
-      <div class="menu-button light light-theeeme _1 w-nav-button">
-        <div class="icon w-icon-nav-menu"></div>
+      <div class="menu-button-2 w-nav-button">
+        <div class="icon-2 w-icon-nav-menu"></div>
       </div>
     </div>
   </div>
   <div class="section wf-section">
     <div class="top w-container">
       <h2 class="center-align">ClanePOS</h2>
-      <p class="center">I led the design, user testing and development of this project from end to end. I collaborated with product designer, Joseph Burutu during the early ideation stage and the lead product manager, Kasarachi Odor throughout the entire project</p>
-      <div class="follow-up-image"><img src="images/ClanePOS-Project-page-min-1.jpg" loading="lazy" width="1015.5" srcset="images/ClanePOS-Project-page-min-1-p-500.jpg 500w, images/ClanePOS-Project-page-min-1-p-800.jpg 800w, images/ClanePOS-Project-page-min-1-p-1080.jpg 1080w, images/ClanePOS-Project-page-min-1-p-1600.jpg 1600w, images/ClanePOS-Project-page-min-1-p-2000.jpg 2000w, images/ClanePOS-Project-page-min-1-p-2600.jpg 2600w, images/ClanePOS-Project-page-min-1-p-3200.jpg 3200w" alt="Mockup of ClanePOS app" sizes="(max-width: 479px) 100vw, (max-width: 767px) 95vw, 88vw" class="center-align"></div>
+      <p class="center">I led the design, user testing and development of this project from end to end. I collaborated with product designer, Joseph Burutu during the early ideation stage, product manager, Kasarachi Odor, Ibukun Adedeji and product designer Thanau Abass throughout the entire project</p>
+      <div class="follow-up-image"><img src="images/ClanePOS-2-min.png" loading="lazy" width="1015.5" srcset="images/ClanePOS-2-min-p-500.png 500w, images/ClanePOS-2-min-p-800.png 800w, images/ClanePOS-2-min-p-1080.png 1080w, images/ClanePOS-2-min-p-1600.png 1600w, images/ClanePOS-2-min-p-2000.png 2000w, images/ClanePOS-2-min-p-2600.png 2600w, images/ClanePOS-2-min-p-3200.png 3200w" alt="Mockup of ClanePOS app" sizes="(max-width: 479px) 100vw, (max-width: 767px) 95vw, 88vw" class="center-align"></div>
     </div>
     <div class="w-container">
       <div class="section-block">
@@ -77,70 +78,15 @@
             <p>Increase revenue by reducing the cost of purchase and maintenance of the traditional POS device</p>
           </li>
         </ul>
-        <div class="follow-up-image"><img src="images/ClanePOS-Merchant-image-min-1.jpg" loading="lazy" width="1016" srcset="images/ClanePOS-Merchant-image-min-1-p-500.jpg 500w, images/ClanePOS-Merchant-image-min-1-p-800.jpg 800w, images/ClanePOS-Merchant-image-min-1-p-1080.jpg 1080w, images/ClanePOS-Merchant-image-min-1-p-1600.jpg 1600w, images/ClanePOS-Merchant-image-min-1-p-2000.jpg 2000w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 95vw, 88vw" alt="Merchant app view"></div>
+        <div class="follow-up-image"><img src="images/ALL-MAJOR-SCREEN.jpg" loading="lazy" width="1016" srcset="images/ALL-MAJOR-SCREEN.jpg 500w, images/ALL-MAJOR-SCREEN.jpg 800w, images/ALL-MAJOR-SCREEN.jpg 1080w, images/ALL-MAJOR-SCREEN.jpg 1600w, images/ALL-MAJOR-SCREEN.jpg 2000w, images/ALL-MAJOR-SCREEN.jpg 2124w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 95vw, 88vw" alt="Merchant app view"></div>
       </div>
       <div class="section-block">
-        <h4 class="heading-30">Sub-merchant</h4>
-        <p>Sub-merchants account can only receive money using their app. Only the primary merchant will be able to withdraw any money received via this account</p>
-        <div class="follow-up-image"><img src="images/ClanePOS-Sub-merchant-image-min.jpg" loading="lazy" width="1016" srcset="images/ClanePOS-Sub-merchant-image-min-p-500.jpg 500w, images/ClanePOS-Sub-merchant-image-min-p-800.jpg 800w, images/ClanePOS-Sub-merchant-image-min-p-1080.jpg 1080w, images/ClanePOS-Sub-merchant-image-min-p-1600.jpg 1600w, images/ClanePOS-Sub-merchant-image-min-p-2000.jpg 2000w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 95vw, 88vw" alt="Submerchant app view"></div>
+        <h4 class="heading-30">Recieve money</h4>
+        <div class="follow-up-image"><img src="images/Recieve-money.jpg" loading="lazy" width="1016" srcset="images/Recieve-money.jpg 500w, images/Recieve-money.jpg 800w, images/Recieve-money.jpg 1080w, images/Recieve-money.jpg 1600w, images/Recieve-money.jpg 2000w, images/Recieve-money.jpg 2124w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 95vw, 88vw" alt="Submerchant app view"></div>
       </div>
-    </div>
-  </div>
-  <div class="section wf-section">
-    <div class="my-container">
-      <div class="w-layout-grid grid-28">
-        <a id="w-node-f08279dd-d804-230e-7acc-e50eec1799d2-67c427b6" href="underconstruction.html" class="w-inline-block">
-          <div id="w-node-f08279dd-d804-230e-7acc-e50eec1799d3-67c427b6" class="w-layout-grid grid-27">
-            <div id="w-node-f08279dd-d804-230e-7acc-e50eec1799d4-67c427b6"><img src="images/Optimus-Bank-min.jpg" loading="lazy" width="1016" srcset="images/Optimus-Bank-min-p-500.jpg 500w, images/Optimus-Bank-min-p-800.jpg 800w, images/Optimus-Bank-min-p-1080.jpg 1080w, images/Optimus-Bank-min-p-1600.jpg 1600w, images/Optimus-Bank-min-p-2000.jpg 2000w, images/Optimus-Bank-min-p-2600.jpg 2600w, images/Optimus-Bank-min-p-3200.jpg 3200w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 95vw, (max-width: 991px) 91vw, 88vw" alt="Image link to Optimus"></div>
-            <div id="w-node-f08279dd-d804-230e-7acc-e50eec1799d6-67c427b6">
-              <p class="project-year">Optimal banking experience design for Optimus Bank</p>
-            </div>
-          </div>
-        </a>
-        <a id="w-node-f08279dd-d804-230e-7acc-e50eec1799d9-67c427b6" href="experience-revamp-of-clanepay.html" class="w-inline-block">
-          <div id="w-node-f08279dd-d804-230e-7acc-e50eec1799da-67c427b6" class="w-layout-grid grid-27">
-            <div id="w-node-f08279dd-d804-230e-7acc-e50eec1799db-67c427b6"><img src="images/ClanepayCover-min.jpg" loading="lazy" width="1016" srcset="images/ClanepayCover-min-p-500.jpg 500w, images/ClanepayCover-min-p-800.jpg 800w, images/ClanepayCover-min-p-1080.jpg 1080w, images/ClanepayCover-min-p-1600.jpg 1600w, images/ClanepayCover-min-p-2000.jpg 2000w, images/ClanepayCover-min-p-2600.jpg 2600w, images/ClanepayCover-min-p-3200.jpg 3200w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 95vw, (max-width: 991px) 91vw, 88vw" alt="Image link to clanepay"></div>
-            <div id="w-node-f08279dd-d804-230e-7acc-e50eec1799dd-67c427b6">
-              <p class="project-year">Experience revamp of ClanePay</p>
-            </div>
-          </div>
-        </a>
-        <a id="w-node-f08279dd-d804-230e-7acc-e50eec1799e0-67c427b6" href="underconstruction.html" class="w-inline-block">
-          <div id="w-node-f08279dd-d804-230e-7acc-e50eec1799e1-67c427b6" class="w-layout-grid grid-27">
-            <div id="w-node-f08279dd-d804-230e-7acc-e50eec1799e2-67c427b6"><img src="images/OnePay-Cover-min.jpg" loading="lazy" width="1016" srcset="images/OnePay-Cover-min-p-500.jpg 500w, images/OnePay-Cover-min-p-800.jpg 800w, images/OnePay-Cover-min-p-1080.jpg 1080w, images/OnePay-Cover-min-p-1600.jpg 1600w, images/OnePay-Cover-min-p-2000.jpg 2000w, images/OnePay-Cover-min-p-2600.jpg 2600w, images/OnePay-Cover-min-p-3200.jpg 3200w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 95vw, (max-width: 991px) 91vw, 88vw" alt="image link to Sterling"></div>
-            <div id="w-node-f08279dd-d804-230e-7acc-e50eec1799e4-67c427b6">
-              <p class="project-year">OnePay for business merchant dashboard</p>
-            </div>
-          </div>
-        </a>
-      </div>
-    </div>
-  </div>
-  <div class="work-section footer wf-section">
-    <div class="container">
-      <div class="border light"></div>
-      <div class="w-layout-grid grid-25">
-        <div id="w-node-a9b1d845-2904-8ed4-60f6-33930f8e9a60-0f8e9a5c" class="connect">
-          <h3 class="light-footer">Connect</h3>
-          <div id="w-node-a9b1d845-2904-8ed4-60f6-33930f8e9a63-0f8e9a5c">
-            <a href="http://www.linkedin.com/in/desmond-ajimuda-384394127" target="_blank" class="link-3 light-theme">Linkedln</a>
-            <a href="https://medium.com/@jazzed_navy_mule_655" class="link-3 light">Medium</a>
-            <a href="https://www.behance.net/creativdirecto5" target="_blank" class="link-3 light">Behance</a>
-          </div>
-        </div>
-        <div id="w-node-a9b1d845-2904-8ed4-60f6-33930f8e9a6a-0f8e9a5c" class="contact">
-          <h3 class="heading-15">Contact</h3>
-          <div id="w-node-a9b1d845-2904-8ed4-60f6-33930f8e9a6d-0f8e9a5c">
-            <a href="tel:+2349057300442" class="link-3 light">+2349057300442</a>
-            <a href="mailto:desmondajimuda@gmail.com" class="link-3 light">desmondajimuda@gmail.com</a>
-          </div>
-        </div>
-        <div id="w-node-a9b1d845-2904-8ed4-60f6-33930f8e9a72-0f8e9a5c" class="get-in-touch">
-          <a id="w-node-a9b1d845-2904-8ed4-60f6-33930f8e9a73-0f8e9a5c" href="mailto:desmondajimuda@gmail.com" class="full-button w-button">GET IN TOUCH</a>
-        </div>
-      </div>
-      <div class="footer-right-align">
-        <div class="copyright-2">Copyright ©Desmond Ajimuda.<br></div>
+      <div class="section-block">
+        <h4 class="heading-30">Withdraw</h4>
+        <div class="follow-up-image"><img src="images/Withdraw.jpg" loading="lazy" width="1016" srcset="images/Withdraw.jpg 500w, images/Withdraw.jpg 800w, images/Withdraw.jpg 1080w, images/Withdraw.jpg 1600w, images/Withdraw.jpg 2000w, images/Withdraw.jpg 2124w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 95vw, 88vw" alt="Submerchant app view"></div>
       </div>
     </div>
   </div>
