--- a/experience-revamp-of-clanepay.html
+++ b/experience-revamp-of-clanepay.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Sep 14 2022 08:16:48 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Sep 18 2022 13:13:29 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="631c3bcc1b9cda412bd0c427" data-wf-site="61bba3b3c26659558fdd2a7b">
 <head>
   <meta charset="utf-8">
@@ -30,15 +30,16 @@
   <meta name="google-site-verification" content="pwE1tlRCgkTCf9vj-ch5A8ml8zfThOoOvesvGE0Rt3I">
 </head>
 <body>
-  <div data-animation="default" data-collapse="small" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
-    <div class="my-container w-container">
-      <a href="index.html" class="brand w-nav-brand"><img src="images/LOGO.svg" loading="lazy" alt=""></a>
-      <nav role="navigation" class="nav-menu w-nav-menu">
-        <a href="index.html" class="nav-link active w-nav-link">Work</a>
-        <a href="old-home-2.html" class="nav-link w-nav-link">About</a>
+  <div data-animation="default" data-collapse="small" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="new-navbar w-nav">
+    <div class="_1280-container w-container">
+      <a href="index.html" class="brand-2 w-nav-brand"><img src="images/LOGOWhite.svg" loading="lazy" alt=""></a>
+      <nav role="navigation" class="nav-menu-2 w-nav-menu">
+        <a href="index.html" class="navitem w-nav-link">Work</a>
+        <a href="old-home-2.html" class="navitem w-nav-link">About</a>
+        <a href="https://znap.link/desmondajimuda" target="_blank" class="navitem w-nav-link">Socials</a>
       </nav>
-      <div class="menu-button light light-theeeme _1 w-nav-button">
-        <div class="icon w-icon-nav-menu"></div>
+      <div class="menu-button-2 w-nav-button">
+        <div class="icon-2 w-icon-nav-menu"></div>
       </div>
     </div>
   </div>
@@ -46,18 +47,18 @@
     <div class="top w-container">
       <h2 class="center-align">Experience revamp of ClanePay</h2>
       <p class="center">I was the lead designer for this project in Q1 - Q3 2022, ideating early concepts, running design sprints, regularly presenting to stakeholders, and delivering final assets for production. I worked with multiple cross-functional teams of 2 product managers, 4 engineers, and leads from Content, Growth, Brand and Marketing.</p>
-      <div class="follow-up-image"><img src="images/ClanePay-Project-page-min-1.jpg" loading="lazy" width="1015.5" srcset="images/ClanePay-Project-page-min-1-p-500.jpg 500w, images/ClanePay-Project-page-min-1-p-800.jpg 800w, images/ClanePay-Project-page-min-1-p-1080.jpg 1080w, images/ClanePay-Project-page-min-1-p-1600.jpg 1600w, images/ClanePay-Project-page-min-1-p-2000.jpg 2000w, images/ClanePay-Project-page-min-1-p-2600.jpg 2600w, images/ClanePay-Project-page-min-1-p-3200.jpg 3200w" alt="Mockup of old and new ClanePay" sizes="(max-width: 479px) 100vw, (max-width: 767px) 95vw, 88vw" class="center-align"></div>
+      <div class="follow-up-image"><img src="images/ClanePay.jpg" loading="lazy" width="1015.5" srcset="images/ClanePay.jpg 500w, images/ClanePay.jpg 800w, images/ClanePay.jpg 1080w, images/ClanePay.jpg 1600w, images/ClanePay.jpg 2000w, images/ClanePay.jpg 2124w" alt="Mockup of old and new ClanePay" sizes="(max-width: 479px) 94vw, (max-width: 767px) 95vw, 88vw" class="center-align"></div>
     </div>
     <div class="w-container">
       <div class="section-block">
         <h3>Project Overview</h3>
         <p>When a user download the ClanePay, they want to add money to their wallet and make payment for anything, anywhere using just their phone.<br><br>The current design often fails to provide users with what they need to know in order to make a decision quickly while trying to add money to their wallet, send money to a friend or pay a merchant in a store, resulting in fewer conversions and users losing trust in the platform.<br><br>The total redesign or rebranding to ClanePay serves to better match the user&#x27;s mental model of making payment with a digital wallet. </p>
-        <div class="follow-up-image"><img src="images/Frame-36356-min.jpg" loading="lazy" alt="Before and after image of ClanePay" srcset="images/Frame-36356-min-p-500.jpg 500w, images/Frame-36356-min-p-800.jpg 800w, images/Frame-36356-min-p-1080.jpg 1080w, images/Frame-36356-min-p-1600.jpg 1600w, images/Frame-36356-min-p-2000.jpg 2000w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 95vw, 88vw" width="1016"></div>
+        <div class="follow-up-image"><img src="images/ClanePay-before-and-after.jpg" loading="lazy" alt="Before and after image of ClanePay" srcset="images/ClanePay-before-and-after.jpg 500w, images/ClanePay-before-and-after.jpg 800w, images/ClanePay-before-and-after.jpg 1080w, images/ClanePay-before-and-after.jpg 1600w, images/ClanePay-before-and-after.jpg 2000w, images/ClanePay-before-and-after.jpg 2124w" sizes="(max-width: 479px) 94vw, (max-width: 767px) 95vw, 88vw" width="1016"></div>
       </div>
       <div class="section-block">
         <h3>The problem</h3>
         <p>We’ve heard from people over the years that the current ClanePay payment experience is stressful due to an uncategorized overload of features and a design that isn’t modern enough.</p>
-        <div class="follow-up-image"><img src="images/Frame-36364-min.jpg" loading="lazy" width="1016" srcset="images/Frame-36364-min-p-500.jpg 500w, images/Frame-36364-min-p-800.jpg 800w, images/Frame-36364-min-p-1080.jpg 1080w, images/Frame-36364-min-p-1600.jpg 1600w, images/Frame-36364-min-p-2000.jpg 2000w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 95vw, 88vw" alt="Breakdown of Current clanepay expeerience"></div>
+        <div class="follow-up-image"><img src="images/ClanePay-Break-down-of-current-experience.jpg" loading="lazy" width="1016" srcset="images/ClanePay-Break-down-of-current-experience.jpg 500w, images/ClanePay-Break-down-of-current-experience.jpg 800w, images/ClanePay-Break-down-of-current-experience.jpg 1080w, images/ClanePay-Break-down-of-current-experience.jpg 1600w, images/ClanePay-Break-down-of-current-experience.jpg 2000w, images/ClanePay-Break-down-of-current-experience.jpg 2124w" sizes="(max-width: 479px) 94vw, (max-width: 767px) 95vw, 88vw" alt="Breakdown of Current clanepay expeerience"></div>
       </div>
       <div class="section-block">
         <h3>The goal</h3>
@@ -83,69 +84,21 @@
         <h3>New Design</h3>
         <h4>A usable, modern, scalable and user-friendly product</h4>
         <p>We were able to come up with a redesign that addressed to a very large extent some of the issues we identified earlier. </p>
-        <div class="follow-up-image"><img src="images/Frame-36366-min.jpg" loading="lazy" width="1016" srcset="images/Frame-36366-min-p-500.jpg 500w, images/Frame-36366-min-p-800.jpg 800w, images/Frame-36366-min-p-1080.jpg 1080w, images/Frame-36366-min-p-1600.jpg 1600w, images/Frame-36366-min-p-2000.jpg 2000w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 95vw, 88vw" alt="The new clane Pay design"></div>
+        <div class="w-layout-grid grid-32">
+          <div id="w-node-e0740dcb-cb8a-ef9c-55a1-e1ee1b6e81c6-2bd0c427" class="div-block-45">
+            <h4>Revamp Dashboard</h4>
+            <p>Besides personalizing the dashboard for users by adding users profile picture and name, we now have a dashboard that help users quickly decide, wether they want to fund their wallet, withdraw money from their wallet or make payment.</p>
+          </div>
+          <div id="w-node-_13fbcb9a-cc2f-3aea-4b44-dada9df26ca9-2bd0c427" class="div-block-44"><img src="images/Graphite.jpg" loading="lazy" srcset="images/Graphite.jpg 500w, images/Graphite.jpg 582w" alt="Revamp Dashboard image" sizes="(max-width: 767px) 47vw, 44vw" class="image-12"></div>
+        </div>
+      </div>
+      <div class="section-block">
+        <h4>Swift payment Experience</h4>
+        <div class="follow-up-image"><img src="images/Swift-payment-experience.jpg" loading="lazy" srcset="images/Swift-payment-experience.jpg 500w, images/Swift-payment-experience.jpg 800w, images/Swift-payment-experience.jpg 1080w, images/Swift-payment-experience.jpg 1600w, images/Swift-payment-experience.jpg 2000w, images/Swift-payment-experience.jpg 2124w" sizes="(max-width: 479px) 94vw, (max-width: 767px) 95vw, 88vw" alt=""></div>
       </div>
       <div class="section-block">
         <h3>Result</h3>
         <p>With the redesign, users more quickly add money to their wallet and send and receive money on ClanePay, especially with their Clanetag. In general, users felt confident to make a decision to add money to their wallet or send money to others after they familiarized themselves with the new Clanepay payment flow.</p>
-      </div>
-    </div>
-  </div>
-  <div class="section wf-section">
-    <div class="my-container">
-      <div class="w-layout-grid grid-28">
-        <a id="w-node-_1f45687a-90d6-8669-8086-e9c961151994-2bd0c427" href="underconstruction.html" class="w-inline-block">
-          <div id="w-node-_1f45687a-90d6-8669-8086-e9c961151995-2bd0c427" class="w-layout-grid grid-27">
-            <div id="w-node-_1f45687a-90d6-8669-8086-e9c961151996-2bd0c427"><img src="images/Optimus-Bank-min.jpg" loading="lazy" width="1016" srcset="images/Optimus-Bank-min-p-500.jpg 500w, images/Optimus-Bank-min-p-800.jpg 800w, images/Optimus-Bank-min-p-1080.jpg 1080w, images/Optimus-Bank-min-p-1600.jpg 1600w, images/Optimus-Bank-min-p-2000.jpg 2000w, images/Optimus-Bank-min-p-2600.jpg 2600w, images/Optimus-Bank-min-p-3200.jpg 3200w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 95vw, (max-width: 991px) 91vw, 88vw" alt="Image link to Optimus"></div>
-            <div id="w-node-_1f45687a-90d6-8669-8086-e9c961151998-2bd0c427">
-              <p class="project-year">Optimal banking experience design for Optimus Bank</p>
-            </div>
-          </div>
-        </a>
-        <a id="w-node-_1f45687a-90d6-8669-8086-e9c96115199d-2bd0c427" href="clanepos.html" class="w-inline-block">
-          <div id="w-node-_1f45687a-90d6-8669-8086-e9c96115199e-2bd0c427" class="w-layout-grid grid-27">
-            <div id="w-node-_1f45687a-90d6-8669-8086-e9c96115199f-2bd0c427"><img src="images/ClanePOS-Cover-min_1.jpg" loading="lazy" width="1016" srcset="images/ClanePOS-Cover-min_1-p-500.jpg 500w, images/ClanePOS-Cover-min_1-p-800.jpg 800w, images/ClanePOS-Cover-min_1-p-1080.jpg 1080w, images/ClanePOS-Cover-min_1-p-1600.jpg 1600w, images/ClanePOS-Cover-min_1-p-2000.jpg 2000w, images/ClanePOS-Cover-min_1-p-2600.jpg 2600w, images/ClanePOS-Cover-min_1-p-3200.jpg 3200w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 95vw, (max-width: 991px) 91vw, 88vw" alt="Image link to ClanePOS"></div>
-            <div id="w-node-_1f45687a-90d6-8669-8086-e9c9611519a1-2bd0c427">
-              <p class="project-year">ClanePOS: Turn your phone into a POS</p>
-            </div>
-          </div>
-        </a>
-        <a id="w-node-_1f45687a-90d6-8669-8086-e9c9611519af-2bd0c427" href="underconstruction.html" class="w-inline-block">
-          <div id="w-node-_1f45687a-90d6-8669-8086-e9c9611519b0-2bd0c427" class="w-layout-grid grid-27">
-            <div id="w-node-_1f45687a-90d6-8669-8086-e9c9611519b1-2bd0c427"><img src="images/OnePay-Cover-min.jpg" loading="lazy" width="1016" srcset="images/OnePay-Cover-min-p-500.jpg 500w, images/OnePay-Cover-min-p-800.jpg 800w, images/OnePay-Cover-min-p-1080.jpg 1080w, images/OnePay-Cover-min-p-1600.jpg 1600w, images/OnePay-Cover-min-p-2000.jpg 2000w, images/OnePay-Cover-min-p-2600.jpg 2600w, images/OnePay-Cover-min-p-3200.jpg 3200w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 95vw, (max-width: 991px) 91vw, 88vw" alt="image link to sterling"></div>
-            <div id="w-node-_1f45687a-90d6-8669-8086-e9c9611519b3-2bd0c427">
-              <p class="project-year">OnePay for business merchant dashboard</p>
-            </div>
-          </div>
-        </a>
-      </div>
-    </div>
-  </div>
-  <div class="work-section footer wf-section">
-    <div class="container">
-      <div class="border light"></div>
-      <div class="w-layout-grid grid-25">
-        <div id="w-node-a9b1d845-2904-8ed4-60f6-33930f8e9a60-0f8e9a5c" class="connect">
-          <h3 class="light-footer">Connect</h3>
-          <div id="w-node-a9b1d845-2904-8ed4-60f6-33930f8e9a63-0f8e9a5c">
-            <a href="http://www.linkedin.com/in/desmond-ajimuda-384394127" target="_blank" class="link-3 light-theme">Linkedln</a>
-            <a href="https://medium.com/@jazzed_navy_mule_655" class="link-3 light">Medium</a>
-            <a href="https://www.behance.net/creativdirecto5" target="_blank" class="link-3 light">Behance</a>
-          </div>
-        </div>
-        <div id="w-node-a9b1d845-2904-8ed4-60f6-33930f8e9a6a-0f8e9a5c" class="contact">
-          <h3 class="heading-15">Contact</h3>
-          <div id="w-node-a9b1d845-2904-8ed4-60f6-33930f8e9a6d-0f8e9a5c">
-            <a href="tel:+2349057300442" class="link-3 light">+2349057300442</a>
-            <a href="mailto:desmondajimuda@gmail.com" class="link-3 light">desmondajimuda@gmail.com</a>
-          </div>
-        </div>
-        <div id="w-node-a9b1d845-2904-8ed4-60f6-33930f8e9a72-0f8e9a5c" class="get-in-touch">
-          <a id="w-node-a9b1d845-2904-8ed4-60f6-33930f8e9a73-0f8e9a5c" href="mailto:desmondajimuda@gmail.com" class="full-button w-button">GET IN TOUCH</a>
-        </div>
-      </div>
-      <div class="footer-right-align">
-        <div class="copyright-2">Copyright ©Desmond Ajimuda.<br></div>
       </div>
     </div>
   </div>
